# clover-lang

./: .gitignore  README.md  meson.build  version.h.in
examples/: hello_world.cl
include/: clover.h  meson.build
include/clover/: assert.h  base.h  compiler.h  lexer.h  list.h  log.h  source.h
src/: compiler.c  lexer.c  list.c  log.c  main.c  meson.build  source.c
tests/: 01_lex_strings_and_chars.cl  02_lex_numbers.cl  03_lex_keywords.cl  04_lex_comments.cl  05_lex_identifiers.cl  06_lex_escape_sequences.cl
